kubernetes/apps/org-tides/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org-tides
  namespace: org
  labels:
    app.kubernetes.io/name: org-tides
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: org-tides
  template:
    metadata:
      labels:
        app.kubernetes.io/name: org-tides
    spec:
      containers:
        - name: org-tides
          image: ghcr.io/pirackr/org-tides:1573d029cd044311ac3e31e56e52f178d3809cb1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
