kubernetes/apps/org-tides/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: org-tides
  namespace: org
  labels:
    app.kubernetes.io/name: org-tides
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: org-tides
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
