kubernetes/apps/org-tides/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: org-tides
  namespace: org
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: todo.pirackr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: org-tides
                port:
                  number: 80
